--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ footer{
 
 
 @media only screen and (max-width: 600px) {
+    .db{
+        display: none;
+    }
     nav{
         display: none;
     }
